# django_airbnb

./: pyproject.toml  temp.txt
config/: settings.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_user_is_host_user_name_alter_user_first_name_and_more.py
